# Geographic-Library-Test

./: .gitignore  CMakeLists.txt  README.md  readme.txt
MagModels/WMM2010COF/: README.txt
geoids/: readme.txt
hasMain/: hasMain.cpp
